--- a/{{cookiecutter.project_slug}}/setup.cfg
+++ b/{{cookiecutter.project_slug}}/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
-name = {{ cookiecutter.project_slug }}
-version = attr: {{ cookiecutter.project_slug }}.__version__
-author = attr: {{ cookiecutter.project_slug }}.__author__
-author_email = attr: {{ cookiecutter.project_slug }}.__contact__
-url = attr: {{ cookiecutter.project_slug }}.__homepage__
-description = attr: {{ cookiecutter.project_slug }}.__doc__
+name = {{ cookiecutter.project_package }}
+version = attr: {{ cookiecutter.project_package }}.__version__
+author = attr: {{ cookiecutter.project_package }}.__author__
+author_email = attr: {{ cookiecutter.project_package }}.__contact__
+url = attr: {{ cookiecutter.project_package }}.__homepage__
+description = attr: {{ cookiecutter.project_package }}.__doc__
 long_description = file: README.rst
 keywords = {{ cookiecutter.keywords }}
 license = BSD 3-Clause License
