--- a/{{cookiecutter.project_slug}}/tox.ini
+++ b/{{cookiecutter.project_slug}}/tox.ini
@@ -27,8 +27,8 @@ commands =
 
 [testenv:flake8]
 commands =
-    flake8 {toxinidir}/{{ cookiecutter.project_slug }}
+    flake8 {toxinidir}/{{ cookiecutter.project_package }}
 
 [testenv:typecheck]
 commands =
-    mypy -p {{ cookiecutter.project_slug }}
+    mypy -p {{ cookiecutter.project_package }}
